

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="sda.oscail.edu.actiontabs.MainActivity">



        <item
            android:id="@+id/menuitem_search"
            android:icon="@android:drawable/ic_menu_search"
            app:showAsAction="ifRoom"
            android:title="@string/ui_menu_search">
        </item>
        <item
            android:id="@+id/menuitem_send"
            android:icon="@android:drawable/ic_menu_send"
            app:showAsAction="ifRoom"
            android:title="@string/ui_menu_send">
        </item>
        <item
            android:id="@+id/menuitem_add"
            android:icon="@android:drawable/ic_menu_add"
            app:showAsAction="ifRoom"
            android:title="@string/ui_menu_add">
        </item>
        <item
            android:id="@+id/menuitem_share"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:icon="@android:drawable/ic_menu_share"
            app:showAsAction="ifRoom"
            android:title="@string/ui_menu_share">
        </item>
        <item
            android:id="@+id/menuitem_feedback"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/ui_menu_feedback">
        </item>
        <item
            android:id="@+id/menuitem_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/ui_menu_about">
        </item>
        <item
            android:id="@+id/menuitem_quit"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            app:showAsAction="ifRoom"
            android:title="@string/ui_menu_quit">
        </item>

    </menu>